--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!--
-版本: v0.1.5
+版本: v0.1.9
 变更记录:
+- v0.1.9 (2025-08-22): 移除“表头选择”按钮（下拉联想与直接点选表头已覆盖其用途）
+- v0.1.8 (2025-08-22): 第2区域输入框新增“实时下拉联想（包含匹配）”，支持键盘上下/回车选择与鼠标点击
+- v0.1.7 (2025-08-22): 在“使用说明”中新增工具用途的简短描述
+- v0.1.6 (2025-08-22): 页眉右上角新增“说明”按钮与模态弹窗（使用说明），样式与页面一致
 - v0.1.5 (2025-08-21): 将 xlsx 与 Sortable 由 CDN 切换为本地 libs 引用，提升离线与稳定性
 - v0.1.4 (2025-08-21): 为外部CDN脚本添加 defer，避免阻塞首屏渲染
 - v0.1.3 (2025-08-21): 新增第5个区域：数据预览（前5行）
@@ -12,7 +16,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Excel 字段提取 - 沈浪 v0.1.5</title>
+  <title>Excel 字段提取 - 沈浪 v0.1.9</title>
   <link rel="stylesheet" href="./styles.css"/>
   <!-- SheetJS (xlsx) -->
   <script defer src="./libs/xlsx.full.min.js"></script>
@@ -21,7 +25,10 @@
 </head>
 <body>
   <header class="app-header">
-    <h1>Excel 字段提取 - 沈浪 v0.1.5</h1>
+    <h1>Excel 字段提取 - 沈浪 v0.1.9</h1>
+    <div class="header-actions">
+      <button id="btnHelp" class="ghost" title="查看使用说明">说明</button>
+    </div>
   </header>
 
   <main class="container">
@@ -37,9 +44,11 @@
     <section class="card">
       <h2>2. 选择字段列名</h2>
       <div class="row">
-        <input id="colInput" type="text" placeholder="输入列名，逗号分隔或回车添加，如：姓名, 电话"/>
+        <div class="input-wrap">
+          <input id="colInput" type="text" placeholder="输入列名，逗号分隔或回车添加，如：姓名, 电话"/>
+          <div id="colSuggest" class="suggest" hidden role="listbox" aria-label="匹配列名"></div>
+        </div>
         <button id="btnAddCol" class="secondary">添加</button>
-        <button id="btnFromHeaders" class="ghost" title="从表头快速选择">表头选择</button>
       </div>
       <div class="flex">
         <div class="panel">
@@ -77,6 +86,28 @@
       </div>
     </section>
   </main>
+
+  <!-- 使用说明模态弹窗 -->
+  <div id="helpModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="helpTitle" hidden>
+    <div class="modal-backdrop" data-close="true"></div>
+    <div class="modal-dialog" role="document">
+      <div class="modal-header">
+        <h3 id="helpTitle">使用说明</h3>
+        <button id="helpClose" class="icon-btn" aria-label="关闭" title="关闭">×</button>
+      </div>
+      <div class="modal-body">
+        <p class="hint">本工具用于从 Excel 表中按列名快速提取所需字段、调整顺序并导出为新的 .xlsx，适合进行数据清洗与字段重组。</p>
+
+          <li>上传 .xlsx 文件：在“1. 上传 Excel 文件”处选择文件，系统会自动解析。</li>
+          <li>选择字段列名：在“2. 选择字段列名”中输入列名后添加，或从“原始表头”点击添加；可拖拽调整顺序。</li>
+          <li>历史配置：在“3. 历史配置”中选择以快速恢复常用列集。</li>
+          <li>导出：在“4. 导出”中设置目标 Sheet 名称并点击“导出处理后的文件”。</li>
+          <li>预览：下方“5. 预览”展示前 5 行，若已选择列则按所选列展示。</li>
+
+        <div class="hint">提示：若列名存在空格或大小写差异，请以表头为准；导出文件名基于原文件名自动生成。</div>
+      </div>
+    </div>
+  </div>
 
   <script defer src="./main.js"></script>
 </body>
